[tool.poetry]
name = "wordle"
version = "0.1.0"
description = ""
authors = ["Karl Clinckspoor <karl@unicamp.br>"]

[tool.poetry.dependencies]
python = "^3.10"
Unidecode = "^1.3.4"
click = "^8.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
